fix: z-index for machineTranslate dialog

--- a/source-code/website/src/renderer/app.css
+++ b/source-code/website/src/renderer/app.css
@@ -82,6 +82,7 @@ sl-select::part(listbox) {
 	padding-bottom: 0.25rem;
 	width: 300px;
 	translate: -1px;
+	z-index: 30;
 	--tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
 	--tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color),
 		0 8px 10px -6px var(--tw-shadow-color);
